Fixed large screen row sizing layout issue

--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -21,7 +21,7 @@
       "summary summary summary"
       "cta cta cta"
       "project1 project2 project3";
-    grid-template-rows: .3fr .4fr .4fr 1.5fr;
+    grid-template-rows: .3fr .4fr .4fr .4fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-row-gap: 1rem;
     grid-column-gap: 1rem;
@@ -30,7 +30,6 @@
     font-family: Arial, Helvetica, sans-serif ;
   }
 }
-
 
 @media (max-width: 680px) {
   .portfolio-content-wrapper {
@@ -105,7 +104,7 @@
   font-size: 2.25rem;
 }
 
-.portfolio-project-card-container {
+.portfolio-project-card {
   text-align: center;
   background-color: rgb(75, 75, 75);
   border-radius: 5px;
@@ -113,10 +112,6 @@
   max-width: 200px;
   justify-self: center;
   align-self: center;
-}
-
-.portfolio-project-card-header {
-
 }
 
 #project1 {
@@ -132,7 +127,7 @@
 }
 
 @media (min-width: 681px) {
-  .portfolio-project-card-container {
+  .portfolio-project-card {
     justify-self:center
   }
 }
